# local-llm-api

./: .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  embedder.py  env.example  functions.py  main.py  models.py  pyproject.toml  test_docker_deployment.py  utilities.py
llm_api/: __init__.py  main.py
llm_api/api/models/: __init__.py  chat.py  embeddings.py  rag.py
llm_api/cli/: __init__.py
llm_api/config/: __init__.py  settings.py
llm_api/core/functions/: __init__.py  registry.py
llm_api/core/functions/builtin/: __init__.py  time.py  weather.py
llm_api/core/llm/: __init__.py  chat_handler.py  embeddings_handler.py
llm_api/core/rag/: __init__.py  pipeline.py  vector_store.py
llm_api/core/utils/: __init__.py  conversation.py  token_counter.py
